--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,16 @@
 <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1">
 <link href="//fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
 <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-<link href="style.min.css" rel="stylesheet">
+<link href="styles/main.css" rel="stylesheet">
 <!-- head/body -->
 <h1>Kechol</h1>
 <ul>
     <li><a href="https://www.facebook.com/kazuyuki.suzuki"><i class="icon-facebook-sign"></i> Facebook</a></li>
     <li><a href="https://twitter.com/kechol"><i class="icon-twitter-sign"></i> Twitter</a></li>
     <li><a href="https://github.com/kechol"><i class="icon-github-sign"></i> Github</a></li>
+    <li><a href="http://blog.kechol.net"><i class="icon-pencil"></i> Blog</a></li>
 </ul>
 <!-- <p class="more"><a href="#"><i class="icon-ellipsis-horizontal"></i> and more...</a></p> -->
-<script type="text/javascript" src="script.min.js"></script>
+<!-- build:js scripts/main.js -->
+<script type="text/javascript" src="scripts/main.js"></script>
+<!-- endbuild -->
