--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Kechol</title>
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1">
+  <meta name="google-site-verification" content="8qBe6eilxEaSTTuGozVN1XpHGxbDmrYVI24kTgUf0EQ">
+  <title>Kechol</title>
   <link href="//fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
   <script src="bundle.js"></script>
@@ -11,9 +13,9 @@
 <body>
   <h1>Kechol</h1>
   <ul>
-      <li><a href="https://www.facebook.com/kazuyuki.suzuki"><i class="icon-facebook-sign"></i> Facebook</a></li>
-      <li><a href="https://twitter.com/kechol"><i class="icon-twitter-sign"></i> Twitter</a></li>
-      <li><a href="https://github.com/kechol"><i class="icon-github-sign"></i> Github</a></li>
+    <li><a href="https://www.facebook.com/kazuyuki.suzuki"><i class="icon-facebook-sign"></i> Facebook</a></li>
+    <li><a href="https://twitter.com/kechol"><i class="icon-twitter-sign"></i> Twitter</a></li>
+    <li><a href="https://github.com/kechol"><i class="icon-github-sign"></i> Github</a></li>
   </ul>
 </body>
 </html>
